support available quantity

--- a/src/app/additional-service/additional-service.component.html
+++ b/src/app/additional-service/additional-service.component.html
@@ -8,7 +8,8 @@
       </span>
     </div>
     <div class="item-qty-selector">
-      <app-additional-service-quantity-selector [parentGroup]="additionalServiceFormGroup" [event]="event" [additionalService]="additionalService" [validSelectionValues]="validSelectionValues"></app-additional-service-quantity-selector>
+      <div translate="show-event.not-available" *ngIf="soldOut"></div>
+      <app-additional-service-quantity-selector *ngIf="!soldOut" [parentGroup]="additionalServiceFormGroup" [event]="event" [additionalService]="additionalService" [validSelectionValues]="validSelectionValues"></app-additional-service-quantity-selector>
     </div>
   </app-item-card>
 </div>
