--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form">
+<div [formGroup]="form" *ngIf="form">
   <div class="form-group" [formArrayName]="field.name">
     <label [attr.for]="ticketUUID + '-' + field.name" [id]="labelId" [attr.aria-hidden]="hideLabelForAssistiveTechnologies">{{labelValue + (field.required ? ' *' : '')}}</label>
     <ng-container [ngSwitch]="field.type" *ngIf="editAllowed">
