--- a/src/app/reservation/ticket-form/ticket-form.component.html
+++ b/src/app/reservation/ticket-form/ticket-form.component.html
@@ -37,13 +37,22 @@
     </div>
 
     <ng-container *ngIf="hasAdditionalServices">
-      <ng-container *ngFor="let asw of additionalServices">
-        <div class="h3 mb-3"><small class="text-muted">{{additionalServiceTitle(asw.title)}}</small></div>
-        <div *ngFor="let field of asw.ticketFieldConfiguration; let idx = index">
+      <ng-container *ngFor="let asw of additionalServices; let idx = index">
+        <div class="h3 d-flex justify-content-between mt-4">
+          <small class="text-muted">{{additionalServiceTitle(asw.title)}}</small>
+          <div ngbDropdown class="d-inline-block" *ngIf="otherTickets">
+            <button type="button" class="btn btn-sm btn-outline-primary" [id]="'switchItem_' + asw.itemId" ngbDropdownToggle>Move to</button>
+            <div ngbDropdownMenu [attr.aria-labelledby]="'switchItem_' + asw.itemId">
+              <button type="button" ngbDropdownItem *ngFor="let tkt of otherTickets" (click)="moveAdditionalServiceItem(idx, asw, tkt)">
+                <span>{{' '}}{{'reservation-page-complete.ticket-nr' | translate}}{{tkt.index}} - {{tkt.categoryName}}</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div *ngFor="let field of asw.ticketFieldConfiguration">
           <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getAdditionalServiceForm(idx)" [ticketAcquired]="ticket.acquired"></app-additional-field>
         </div>
       </ng-container>
-
     </ng-container>
   </div>
 </div>
