--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -51,10 +51,14 @@
           <h3 class="card-title flex-md-shrink-0" *ngIf="ticket.assigned">{{ticket.fullName}}</h3>
           <h3 class="card-title text-muted" *ngIf="!ticket.assigned">{{'reservation-page-complete.ticket-not-assigned' | translate }}</h3>
         </div>
+        <div *ngIf="hasAdditionalData(ticket)" class="pl-4">
+          <span *ngFor="let additionalData of getGroupedAdditionalData(ticket); let last = last; let first = first" [class.pl-1]="first">
+            {{additionalData.count}} x {{ additionalData.title | translateDescription}}<span *ngIf="!last">,</span>
+          </span>
+        </div>
         <ng-container *ngIf="reservationFinalized">
           <ng-container *ngIf="!ticketFormVisible">
             <hr>
-
             <div class="row justify-content-end">
               <div class="col-lg-3 col-sm-6 col-12 mb-2" *ngIf="!isOnlineTicket(tc) && ticket.assigned && !ticket.cancellationEnabled && ticket.downloadEnabled" >
                 <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-default btn-block"><fa-icon [icon]="['fas', 'search-plus']" a11yRole="presentation"></fa-icon> {{'reservation-page-complete.show-ticket'|translate}}</a>
@@ -78,7 +82,11 @@
           <div *ngIf="ticketsFormShow[ticket.uuid]" class="mt-4">
             <div class="alert alert-info" translate="reservation-page-complete.info-update" *ngIf="event.assignmentConfiguration.enableTicketTransfer && ticket.assigned && !ticket.locked"></div>
             <form [formGroup]="ticketsFormControl[ticket.uuid]" (submit)="updateTicket(ticket.uuid)">
-              <app-ticket-form [ticket]="ticket" [purchaseContext]="event" [form]="ticketsFormControl[ticket.uuid]" [reservationMetadata]="reservationInfo.metadata" [additionalServicesForm]="getAdditionalDataForm(ticket)" [additionalServices]="getAdditionalData(ticket)"></app-ticket-form>
+              <app-ticket-form [ticket]="ticket" [purchaseContext]="event" [form]="ticketsFormControl[ticket.uuid]" [reservationMetadata]="reservationInfo.metadata"></app-ticket-form>
+              <app-additional-service-form [additionalServicesForm]="getAdditionalDataForm(ticket)"
+                                           [additionalServices]="getAdditionalData(ticket)"
+                                           [ticket]="ticket"
+                                           [cardStyle]="false"></app-additional-service-form>
               <div class="bg-white pb-3 pt-3" [class.sticky]="ticket.ticketFieldConfigurationAfterStandard.length > 0">
                 <div class="row d-flex justify-content-between">
                   <div class="col-md-5 order-md-1 col-12">
