--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -5,6 +5,7 @@
       <input *ngSwitchCase="'input:text'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
+      <input *ngSwitchCase="'input:dateOfBirth'" [attr.id]="ticketUUID + '-' + field.name" type="date" [max]="yesterday" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <textarea *ngSwitchCase="'textarea'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="placeholder" formControlName="0" appInvalidFeedback></textarea>
       <ng-container *ngSwitchCase="'country'">
         <ng-select *ngIf="!isMobile" [attr.id]="ticketUUID + '-' + field.name" formControlName="0" appInvalidFeedback [items]="countries" bindLabel="name" bindValue="isoCode" [inputAttrs]="{autocomplete: 'nope'}">
