--- a/src/app/additional-service-form/additional-service-form.component.html
+++ b/src/app/additional-service-form/additional-service-form.component.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div *ngFor="let field of asw.ticketFieldConfiguration">
-        <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="getAdditionalServiceForm(idx)" [ticketAcquired]="ticket.acquired"></app-additional-field>
+        <app-additional-field [field]="field" [elementUUID]="ticket.uuid" [form]="getAdditionalServiceForm(idx)" [ticketAcquired]="ticket.acquired"></app-additional-field>
       </div>
     </div>
   </div>
